[package]
name = "aarch64-esr-decoder"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A library and command-line utility for decoding aarch64 Exception Syndrome Register values."
repository = "https://github.com/google/aarch64-esr-decoder/"
keywords = ["aarch64", "esr"]
categories = ["development-tools"]
exclude = [".github/"]

[dependencies]
bit_field = "0.10.1"
thiserror = "1.0.30"
