[package]
name = "aarch64-esr-web"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A webapp for decoding aarch64 Exception Syndrome Register values."
repository = "https://github.com/google/aarch64-esr-decoder/"
keywords = ["aarch64", "esr", "wasm"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
aarch64-esr-decoder = { path = ".." }
web-sys = { version = "0.3.55", features = [ "Document", "Element", "HtmlElement", "Node", "Window" ] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Optimize for small code size.
opt-level = "s"
