[package]
name = "arm-sysregs"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2024"
license = "Apache-2.0"
description = "A library for parsing Arm system register XML files."
repository = "https://github.com/google/aarch64-esr-decoder/"
keywords = ["aarch64"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
quick-xml = { version = "0.38.1", features = ["serialize"] }
