[package]
name = "generate-sysregs"
version = "0.1.0"
authors = ["Andrew Walbran <qwandor@google.com>"]
edition = "2024"
license = "Apache-2.0"
description = "A tool to generate a crate of accessors for Arm system registers based on the JSON description file."
repository = "https://github.com/google/aarch64-esr-decoder/"
keywords = ["aarch64"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
arm-sysregs-json = { version = "0.2.0", path = "../arm-sysregs-json" }
clap = { version = "4.5.51", features = ["derive"] }
eyre = "0.6.12"
serde_json = "1.0.145"
